fixed alignment issue with HR tag

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,16 +40,9 @@ hr{
   border-color: #f65c78;
   border-width: 4.5px;
   width: 15%;
-  position: relative;
-  top: 30px;
-  clear: none;
   margin: auto;
 }
 
-.hr-prob{
-  position: relative;
-  left: 320px;
-}
 
 .top-container{
   background-color: #e0ebe8;
@@ -65,6 +58,7 @@ hr{
   text-align: center;
   margin:100px auto 100px auto;
   line-height: 2;
+  padding-bottom: 100px;
 }
 
 .skill-row{
@@ -72,11 +66,13 @@ hr{
   margin:100px auto 100px auto;
   text-align: left;
   line-height: 2;
+  padding-bottom: 200px;
 }
 
-.middle-container{
-
+.skill-header{
+  padding-top: 50px;
 }
+
 
 .contact-me{
   margin-bottom: 100px;
@@ -126,13 +122,13 @@ a.contact-me:active {
 /******************* IMAGES *******************/
 .top-cloud{
   position: absolute;
-  right: 50px;
+  right: 350px;
   top: 100px;
 }
 
 .bottom-cloud{
   position: absolute;
-  left: 100px;
+  left: 300px;
   top: 450px;
 }
 
@@ -146,13 +142,15 @@ a.contact-me:active {
   width: 40%;
   float: left;/*only use for wrapping text*/
   margin-right: 30px;
+  margin-bottom: 10px;
 }
 
 .brain-img{
-  width: 40%;
+  width: 35%;
   float: right;
   position: relative;
-  bottom: 100px;
+  bottom:150px;
+  right: 100px;
 
 }
 
@@ -163,6 +161,11 @@ a.contact-me:active {
 
 .profile{
   border-radius:50%;
-  width: 50%;
+  width: 40%;
   margin:auto;
+}
+
+.background-mountain{
+  height: auto;
+  width: 1200px;
 }
